--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import 'scss/footer';
 @import 'scss/forms';
 @import 'scss/header';
+@import 'scss/helpguide';
 @import 'scss/instruction';
 @import 'scss/layout';
 @import 'scss/login';
